src/parser/antlr4/PacketDslParser.ts
// Generated from PacketDsl.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { PacketDslListener } from "./PacketDslListener";
import { PacketDslVisitor } from "./PacketDslVisitor";


export class PacketDslParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly UINT8 = 14;
	public static readonly UINT16 = 15;
	public static readonly UINT32 = 16;
	public static readonly UINT64 = 17;
	public static readonly INT8 = 18;
	public static readonly INT16 = 19;
	public static readonly INT32 = 20;
	public static readonly INT64 = 21;
	public static readonly FLOAT32 = 22;
	public static readonly FLOAT64 = 23;
	public static readonly DIGITS = 24;
	public static readonly STRING = 25;
	public static readonly ROOT = 26;
	public static readonly PACKET = 27;
	public static readonly REPEAT = 28;
	public static readonly METADATA = 29;
	public static readonly MATCH = 30;
	public static readonly COLON = 31;
	public static readonly COMMA = 32;
	public static readonly SEMICOLON = 33;
	public static readonly IDENTIFIER = 34;
	public static readonly STRING_LITERAL = 35;
	public static readonly LINE_COMMENT = 36;
	public static readonly WS = 37;
	public static readonly RULE_packet = 0;
	public static readonly RULE_optionDefinition = 1;
	public static readonly RULE_optionDeclaration = 2;
	public static readonly RULE_packetDefinition = 3;
	public static readonly RULE_fieldDefinition = 4;
	public static readonly RULE_metaDataDefinition = 5;
	public static readonly RULE_lengthFieldDeclaration = 6;
	public static readonly RULE_checkSumFieldDeclaration = 7;
	public static readonly RULE_metaDataDeclaration = 8;
	public static readonly RULE_value = 9;
	public static readonly RULE_type = 10;
	public static readonly RULE_matchFieldDeclaration = 11;
	public static readonly RULE_matchPair = 12;
	public static readonly RULE_inerObjectDeclaration = 13;
	public static readonly RULE_list = 14;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"packet", "optionDefinition", "optionDeclaration", "packetDefinition", 
		"fieldDefinition", "metaDataDefinition", "lengthFieldDeclaration", "checkSumFieldDeclaration", 
		"metaDataDeclaration", "value", "type", "matchFieldDeclaration", "matchPair", 
		"inerObjectDeclaration", "list",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'options'", "'{'", "'}'", "'='", "'@lengthOf('", "')'", "'@calculatedFrom('", 
		"'string'", "'char'", "'char['", "']'", "'as'", "'['", undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, "'root'", "'packet'", "'repeat'", "'MetaData'", 
		"'match'", "':'", "','", "';'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		"UINT8", "UINT16", "UINT32", "UINT64", "INT8", "INT16", "INT32", "INT64", 
		"FLOAT32", "FLOAT64", "DIGITS", "STRING", "ROOT", "PACKET", "REPEAT", 
		"METADATA", "MATCH", "COLON", "COMMA", "SEMICOLON", "IDENTIFIER", "STRING_LITERAL", 
		"LINE_COMMENT", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(PacketDslParser._LITERAL_NAMES, PacketDslParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return PacketDslParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "PacketDsl.g4"; }

	// @Override
	public get ruleNames(): string[] { return PacketDslParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return PacketDslParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(PacketDslParser._ATN, this);
	}
	// @RuleVersion(0)
	public packet(): PacketContext {
		let _localctx: PacketContext = new PacketContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, PacketDslParser.RULE_packet);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 35;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PacketDslParser.T__0) | (1 << PacketDslParser.ROOT) | (1 << PacketDslParser.PACKET) | (1 << PacketDslParser.METADATA))) !== 0)) {
				{
				this.state = 33;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case PacketDslParser.ROOT:
				case PacketDslParser.PACKET:
					{
					this.state = 30;
					this.packetDefinition();
					}
					break;
				case PacketDslParser.METADATA:
					{
					this.state = 31;
					this.metaDataDefinition();
					}
					break;
				case PacketDslParser.T__0:
					{
					this.state = 32;
					this.optionDefinition();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 37;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public optionDefinition(): OptionDefinitionContext {
		let _localctx: OptionDefinitionContext = new OptionDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, PacketDslParser.RULE_optionDefinition);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 38;
			this.match(PacketDslParser.T__0);
			this.state = 39;
			this.match(PacketDslParser.T__1);
			this.state = 43;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === PacketDslParser.IDENTIFIER) {
				{
				{
				this.state = 40;
				this.optionDeclaration();
				}
				}
				this.state = 45;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 46;
			this.match(PacketDslParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public optionDeclaration(): OptionDeclarationContext {
		let _localctx: OptionDeclarationContext = new OptionDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, PacketDslParser.RULE_optionDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 48;
			this.match(PacketDslParser.IDENTIFIER);
			this.state = 49;
			this.match(PacketDslParser.T__3);
			this.state = 50;
			this.value();
			this.state = 52;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PacketDslParser.SEMICOLON) {
				{
				this.state = 51;
				this.match(PacketDslParser.SEMICOLON);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public packetDefinition(): PacketDefinitionContext {
		let _localctx: PacketDefinitionContext = new PacketDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, PacketDslParser.RULE_packetDefinition);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 55;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PacketDslParser.ROOT) {
				{
				this.state = 54;
				this.match(PacketDslParser.ROOT);
				}
			}

			this.state = 57;
			this.match(PacketDslParser.PACKET);
			this.state = 58;
			this.match(PacketDslParser.IDENTIFIER);
			this.state = 59;
			this.match(PacketDslParser.T__1);
			this.state = 63;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 8)) & ~0x1F) === 0 && ((1 << (_la - 8)) & ((1 << (PacketDslParser.T__7 - 8)) | (1 << (PacketDslParser.T__8 - 8)) | (1 << (PacketDslParser.T__9 - 8)) | (1 << (PacketDslParser.UINT8 - 8)) | (1 << (PacketDslParser.UINT16 - 8)) | (1 << (PacketDslParser.UINT32 - 8)) | (1 << (PacketDslParser.UINT64 - 8)) | (1 << (PacketDslParser.INT8 - 8)) | (1 << (PacketDslParser.INT16 - 8)) | (1 << (PacketDslParser.INT32 - 8)) | (1 << (PacketDslParser.INT64 - 8)) | (1 << (PacketDslParser.FLOAT32 - 8)) | (1 << (PacketDslParser.FLOAT64 - 8)) | (1 << (PacketDslParser.REPEAT - 8)) | (1 << (PacketDslParser.MATCH - 8)) | (1 << (PacketDslParser.IDENTIFIER - 8)))) !== 0)) {
				{
				{
				this.state = 60;
				this.fieldDefinition();
				}
				}
				this.state = 65;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 66;
			this.match(PacketDslParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fieldDefinition(): FieldDefinitionContext {
		let _localctx: FieldDefinitionContext = new FieldDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, PacketDslParser.RULE_fieldDefinition);
		let _la: number;
		try {
			this.state = 88;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				_localctx = new InerObjectFieldContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 69;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === PacketDslParser.REPEAT) {
					{
					this.state = 68;
					this.match(PacketDslParser.REPEAT);
					}
				}

				this.state = 71;
				this.inerObjectDeclaration();
				this.state = 72;
				this.match(PacketDslParser.COMMA);
				}
				break;

			case 2:
				_localctx = new MetaFieldContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 75;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === PacketDslParser.REPEAT) {
					{
					this.state = 74;
					this.match(PacketDslParser.REPEAT);
					}
				}

				this.state = 77;
				this.metaDataDeclaration();
				}
				break;

			case 3:
				_localctx = new ObjectFieldContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 79;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === PacketDslParser.REPEAT) {
					{
					this.state = 78;
					this.match(PacketDslParser.REPEAT);
					}
				}

				this.state = 81;
				this.match(PacketDslParser.IDENTIFIER);
				this.state = 82;
				this.match(PacketDslParser.COMMA);
				}
				break;

			case 4:
				_localctx = new LengthFieldContext(_localctx);
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 83;
				this.lengthFieldDeclaration();
				}
				break;

			case 5:
				_localctx = new CheckSumFieldContext(_localctx);
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 84;
				this.checkSumFieldDeclaration();
				}
				break;

			case 6:
				_localctx = new MatchFieldContext(_localctx);
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 85;
				this.matchFieldDeclaration();
				this.state = 86;
				this.match(PacketDslParser.COMMA);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public metaDataDefinition(): MetaDataDefinitionContext {
		let _localctx: MetaDataDefinitionContext = new MetaDataDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, PacketDslParser.RULE_metaDataDefinition);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 90;
			this.match(PacketDslParser.METADATA);
			this.state = 91;
			this.match(PacketDslParser.IDENTIFIER);
			this.state = 92;
			this.match(PacketDslParser.T__1);
			this.state = 96;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 8)) & ~0x1F) === 0 && ((1 << (_la - 8)) & ((1 << (PacketDslParser.T__7 - 8)) | (1 << (PacketDslParser.T__8 - 8)) | (1 << (PacketDslParser.T__9 - 8)) | (1 << (PacketDslParser.UINT8 - 8)) | (1 << (PacketDslParser.UINT16 - 8)) | (1 << (PacketDslParser.UINT32 - 8)) | (1 << (PacketDslParser.UINT64 - 8)) | (1 << (PacketDslParser.INT8 - 8)) | (1 << (PacketDslParser.INT16 - 8)) | (1 << (PacketDslParser.INT32 - 8)) | (1 << (PacketDslParser.INT64 - 8)) | (1 << (PacketDslParser.FLOAT32 - 8)) | (1 << (PacketDslParser.FLOAT64 - 8)) | (1 << (PacketDslParser.IDENTIFIER - 8)))) !== 0)) {
				{
				{
				this.state = 93;
				this.metaDataDeclaration();
				}
				}
				this.state = 98;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 99;
			this.match(PacketDslParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public lengthFieldDeclaration(): LengthFieldDeclarationContext {
		let _localctx: LengthFieldDeclarationContext = new LengthFieldDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, PacketDslParser.RULE_lengthFieldDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 102;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 11, this._ctx) ) {
			case 1:
				{
				this.state = 101;
				this.type();
				}
				break;
			}
			this.state = 104;
			_localctx._name = this.match(PacketDslParser.IDENTIFIER);
			{
			this.state = 105;
			this.match(PacketDslParser.T__4);
			this.state = 106;
			_localctx._from = this.match(PacketDslParser.IDENTIFIER);
			this.state = 107;
			this.match(PacketDslParser.T__5);
			}
			this.state = 110;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PacketDslParser.STRING_LITERAL) {
				{
				this.state = 109;
				this.match(PacketDslParser.STRING_LITERAL);
				}
			}

			this.state = 112;
			this.match(PacketDslParser.COMMA);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public checkSumFieldDeclaration(): CheckSumFieldDeclarationContext {
		let _localctx: CheckSumFieldDeclarationContext = new CheckSumFieldDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, PacketDslParser.RULE_checkSumFieldDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 115;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 13, this._ctx) ) {
			case 1:
				{
				this.state = 114;
				this.type();
				}
				break;
			}
			this.state = 117;
			_localctx._name = this.match(PacketDslParser.IDENTIFIER);
			{
			this.state = 118;
			this.match(PacketDslParser.T__6);
			this.state = 119;
			_localctx._from = this.match(PacketDslParser.STRING);
			this.state = 120;
			this.match(PacketDslParser.T__5);
			}
			this.state = 123;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PacketDslParser.STRING_LITERAL) {
				{
				this.state = 122;
				this.match(PacketDslParser.STRING_LITERAL);
				}
			}

			this.state = 125;
			this.match(PacketDslParser.COMMA);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public metaDataDeclaration(): MetaDataDeclarationContext {
		let _localctx: MetaDataDeclarationContext = new MetaDataDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, PacketDslParser.RULE_metaDataDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 128;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 15, this._ctx) ) {
			case 1:
				{
				this.state = 127;
				this.type();
				}
				break;
			}
			this.state = 130;
			_localctx._name = this.match(PacketDslParser.IDENTIFIER);
			this.state = 132;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PacketDslParser.STRING_LITERAL) {
				{
				this.state = 131;
				this.match(PacketDslParser.STRING_LITERAL);
				}
			}

			this.state = 134;
			this.match(PacketDslParser.COMMA);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public value(): ValueContext {
		let _localctx: ValueContext = new ValueContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, PacketDslParser.RULE_value);
		try {
			this.state = 139;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case PacketDslParser.T__7:
			case PacketDslParser.T__8:
			case PacketDslParser.T__9:
			case PacketDslParser.UINT8:
			case PacketDslParser.UINT16:
			case PacketDslParser.UINT32:
			case PacketDslParser.UINT64:
			case PacketDslParser.INT8:
			case PacketDslParser.INT16:
			case PacketDslParser.INT32:
			case PacketDslParser.INT64:
			case PacketDslParser.FLOAT32:
			case PacketDslParser.FLOAT64:
			case PacketDslParser.IDENTIFIER:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 136;
				this.type();
				}
				break;
			case PacketDslParser.STRING:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 137;
				this.match(PacketDslParser.STRING);
				}
				break;
			case PacketDslParser.DIGITS:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 138;
				this.match(PacketDslParser.DIGITS);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public type(): TypeContext {
		let _localctx: TypeContext = new TypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, PacketDslParser.RULE_type);
		let _la: number;
		try {
			this.state = 159;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case PacketDslParser.IDENTIFIER:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 141;
				this.match(PacketDslParser.IDENTIFIER);
				}
				break;
			case PacketDslParser.UINT8:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 142;
				this.match(PacketDslParser.UINT8);
				}
				break;
			case PacketDslParser.UINT16:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 143;
				this.match(PacketDslParser.UINT16);
				}
				break;
			case PacketDslParser.UINT32:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 144;
				this.match(PacketDslParser.UINT32);
				}
				break;
			case PacketDslParser.UINT64:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 145;
				this.match(PacketDslParser.UINT64);
				}
				break;
			case PacketDslParser.INT8:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 146;
				this.match(PacketDslParser.INT8);
				}
				break;
			case PacketDslParser.INT16:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 147;
				this.match(PacketDslParser.INT16);
				}
				break;
			case PacketDslParser.INT32:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 148;
				this.match(PacketDslParser.INT32);
				}
				break;
			case PacketDslParser.INT64:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 149;
				this.match(PacketDslParser.INT64);
				}
				break;
			case PacketDslParser.FLOAT32:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 150;
				this.match(PacketDslParser.FLOAT32);
				}
				break;
			case PacketDslParser.FLOAT64:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 151;
				this.match(PacketDslParser.FLOAT64);
				}
				break;
			case PacketDslParser.T__7:
				this.enterOuterAlt(_localctx, 12);
				{
				this.state = 152;
				this.match(PacketDslParser.T__7);
				}
				break;
			case PacketDslParser.T__8:
				this.enterOuterAlt(_localctx, 13);
				{
				this.state = 153;
				this.match(PacketDslParser.T__8);
				}
				break;
			case PacketDslParser.T__9:
				this.enterOuterAlt(_localctx, 14);
				{
				this.state = 154;
				this.match(PacketDslParser.T__9);
				this.state = 156;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === PacketDslParser.DIGITS) {
					{
					this.state = 155;
					this.match(PacketDslParser.DIGITS);
					}
				}

				this.state = 158;
				this.match(PacketDslParser.T__10);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public matchFieldDeclaration(): MatchFieldDeclarationContext {
		let _localctx: MatchFieldDeclarationContext = new MatchFieldDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, PacketDslParser.RULE_matchFieldDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 161;
			this.match(PacketDslParser.MATCH);
			this.state = 162;
			_localctx._matchKey = this.match(PacketDslParser.IDENTIFIER);
			this.state = 163;
			this.match(PacketDslParser.T__11);
			this.state = 164;
			_localctx._matchName = this.match(PacketDslParser.IDENTIFIER);
			this.state = 165;
			this.match(PacketDslParser.T__1);
			this.state = 167;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 166;
				this.matchPair();
				}
				}
				this.state = 169;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PacketDslParser.T__12) | (1 << PacketDslParser.DIGITS) | (1 << PacketDslParser.STRING))) !== 0));
			this.state = 171;
			this.match(PacketDslParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public matchPair(): MatchPairContext {
		let _localctx: MatchPairContext = new MatchPairContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, PacketDslParser.RULE_matchPair);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 176;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case PacketDslParser.DIGITS:
				{
				this.state = 173;
				this.match(PacketDslParser.DIGITS);
				}
				break;
			case PacketDslParser.STRING:
				{
				this.state = 174;
				this.match(PacketDslParser.STRING);
				}
				break;
			case PacketDslParser.T__12:
				{
				this.state = 175;
				this.list();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 178;
			this.match(PacketDslParser.COLON);
			this.state = 179;
			this.match(PacketDslParser.IDENTIFIER);
			this.state = 181;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PacketDslParser.COMMA) {
				{
				this.state = 180;
				this.match(PacketDslParser.COMMA);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public inerObjectDeclaration(): InerObjectDeclarationContext {
		let _localctx: InerObjectDeclarationContext = new InerObjectDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, PacketDslParser.RULE_inerObjectDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 183;
			this.match(PacketDslParser.IDENTIFIER);
			{
			this.state = 184;
			this.match(PacketDslParser.T__1);
			this.state = 186;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 185;
				this.fieldDefinition();
				}
				}
				this.state = 188;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (((((_la - 8)) & ~0x1F) === 0 && ((1 << (_la - 8)) & ((1 << (PacketDslParser.T__7 - 8)) | (1 << (PacketDslParser.T__8 - 8)) | (1 << (PacketDslParser.T__9 - 8)) | (1 << (PacketDslParser.UINT8 - 8)) | (1 << (PacketDslParser.UINT16 - 8)) | (1 << (PacketDslParser.UINT32 - 8)) | (1 << (PacketDslParser.UINT64 - 8)) | (1 << (PacketDslParser.INT8 - 8)) | (1 << (PacketDslParser.INT16 - 8)) | (1 << (PacketDslParser.INT32 - 8)) | (1 << (PacketDslParser.INT64 - 8)) | (1 << (PacketDslParser.FLOAT32 - 8)) | (1 << (PacketDslParser.FLOAT64 - 8)) | (1 << (PacketDslParser.REPEAT - 8)) | (1 << (PacketDslParser.MATCH - 8)) | (1 << (PacketDslParser.IDENTIFIER - 8)))) !== 0));
			this.state = 190;
			this.match(PacketDslParser.T__2);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public list(): ListContext {
		let _localctx: ListContext = new ListContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, PacketDslParser.RULE_list);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 192;
			this.match(PacketDslParser.T__12);
			this.state = 193;
			_la = this._input.LA(1);
			if (!(_la === PacketDslParser.DIGITS || _la === PacketDslParser.STRING)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}
